--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 ruff = "^0.0.288"
+fastapi = {extras = ["all"], version = "^0.103.1"}
 
 
 [build-system]
