--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,12 @@
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
 			"settings": {
+				"[jinja-html]": {
+					"editor.defaultFormatter": "vscode.html-language-features"
+				},
+				"[html]": {
+					"editor.defaultFormatter": "vscode.html-language-features"
+				},
 				"[python]": {
 					"editor.codeActionsOnSave": {
 						"source.organizeImports": true
