--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,69 +1,70 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+  "name": "Python 3",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
 
-	// Use 'postCreateCommand' to run commands after the container is created.
+  // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "bash .devcontainer/postCreateCommands.sh",
 
-	// Configure tool-specific properties.
-	"customizations": {
-		// Configure properties specific to VS Code.
-		"vscode": {
-			// Set *default* container specific settings.json values on container create.
-			"settings": {
-				"[jinja-html]": {
-					"editor.defaultFormatter": "vscode.html-language-features"
-				},
-				"[html]": {
-					"editor.defaultFormatter": "vscode.html-language-features"
-				},
-				"[python]": {
-					"editor.codeActionsOnSave": {
-						"source.organizeImports": true
-					},
-					"editor.defaultFormatter": "ms-python.black-formatter",
-					"editor.formatOnSave": true,
-					"editor.insertSpaces": true,
-  				"editor.tabSize": 4  
-				},
-				"python.analysis.typeCheckingMode": "basic",
-				"python.defaultInterpreterPath": "./src/.venv/bin/python3.11",
-				"files.exclude": {
-					"**/__pycache__": true
-				}
-			},
-			
-			// Add the IDs of extensions you want installed when the container is created.
-			"extensions": [
-				"ms-python.python",
-				"ms-python.vscode-pylance",
-				"ms-python.black-formatter",
-				"KevinRose.vsc-python-indent",
-				"njpwerner.autodocstring",
-				"tamasfe.even-better-toml",
-				"usernamehw.errorlens",
-				"mhutchie.git-graph",
-				"ms-azuretools.vscode-docker",
-				"albert.TabOut",
-				"Codeium.codeium",
-				"charliermarsh.ruff",
-				"samuelcolvin.jinjahtml"
-			]
-		}
-	}
+  // Configure tool-specific properties.
+  "customizations": {
+    // Configure properties specific to VS Code.
+    "vscode": {
+      // Set *default* container specific settings.json values on container create.
+      "settings": {
+        "[jinja-html]": {
+          "editor.defaultFormatter": "vscode.html-language-features"
+        },
+        "[html]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[python]": {
+          "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+          },
+          "editor.defaultFormatter": "ms-python.black-formatter",
+          "editor.formatOnSave": true,
+          "editor.insertSpaces": true,
+          "editor.tabSize": 4
+        },
+        "python.analysis.typeCheckingMode": "basic",
+        "python.defaultInterpreterPath": "./src/.venv/bin/python3.11",
+        "files.exclude": {
+          "**/__pycache__": true
+        }
+      },
 
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+      // Add the IDs of extensions you want installed when the container is created.
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.black-formatter",
+        "KevinRose.vsc-python-indent",
+        "njpwerner.autodocstring",
+        "tamasfe.even-better-toml",
+        "usernamehw.errorlens",
+        "mhutchie.git-graph",
+        "ms-azuretools.vscode-docker",
+        "albert.TabOut",
+        "Codeium.codeium",
+        "charliermarsh.ruff",
+        "samuelcolvin.jinjahtml",
+        "esbenp.prettier-vscode"
+      ]
+    }
+  }
 
-	// Set the default workspace folder
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
+
+  // Set the default workspace folder
   // "workspaceFolder": "/workspaces/python-concurrency-demo/src"
 }
