--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -13,13 +13,13 @@ uvicorn = "0.15.0"
 python-dotenv = "0.19.1"
 aiofiles = "0.7.0"
 python-multipart = "0.0.5"
-jinja2 = "3.0.2"
+jinja2 = "3.1.2"
 markdown = "3.3.4"
-pytest = "*"
+pytest = "7.4.2"
 pydantic-xml = "1.0.0"
 mongita = "^1.2.0"
 lxml = "^4.9.3"
-pytest-asyncio = "*"
+pytest-asyncio = "0.20.3"
 
 
 [build-system]
