--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,8 @@
         "python.analysis.typeCheckingMode": "basic",
         "python.defaultInterpreterPath": "./src/.venv/bin/python3.11",
         "files.exclude": {
-          "**/__pycache__": true
+          "**/__pycache__": true,
+          "**/.pytest_cache": true
         }
       },
 
