--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-ruff = "^0.0.288"
 fastapi = "0.70.0"
 requests = "2.26.0"
 uvicorn = "0.15.0"
@@ -15,13 +14,23 @@ aiofiles = "0.7.0"
 python-multipart = "0.0.5"
 jinja2 = "3.1.2"
 markdown = "3.3.4"
-pytest = "7.4.2"
 pydantic-xml = "1.0.0"
 mongita = "^1.2.0"
 lxml = "^4.9.3"
-pytest-asyncio = "0.20.3"
 better-profanity = "^0.7.0"
 
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
+pytest = "7.4.2"
+pytest-asyncio = "0.20.3"
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+ruff = "0.0.288"
 
 [build-system]
 requires = ["poetry-core"]
